--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="preload" as="font" href="../public/fonts/hkgroteskbold.woff" type="font/woff" crossorigin="anonymous">
   <link rel="preload" as="font" href="../public/fonts/hkgrotesklight.woff" type="font/woff" crossorigin="anonymous">
   <link rel="preload" as="font" href="../public/fonts/hkgroteskregular.woff" type="font/woff" crossorigin="anonymous">
+
+  <base href="{{ site.baseurl }}">
 </head>
 <body>
   <header>
