--- a/src/about.html
+++ b/src/about.html
@@ -26,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="./index.html">Faces</a>
+            <a class="nav-link " href="./index.html">Faces</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./lucid.html">Lucid</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link active" href="./about.html">About</a>
           </li>
         </ul>
       </div>
@@ -45,9 +45,11 @@
       <div class="container-fluid mt-5">
 
         <div class="row" id="content">
-          <div class="col-12 mx-auto text-center" id="facesContent">
-            Neurons
+          <div class="col-12 mx-auto text-center">
+            About text
           </div>
+        </div>
+        <div id="lucidImages" class="row">
         </div>
       </div>
     </section>
@@ -70,5 +72,7 @@
       </div>
     </footer>
   </main>
+  <script src="/js/lucid.js"></script>
 </body>
+
 </html>
