--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,23 @@
 
     <section class="hero-header">
       <div class="container-fluid mt-5">
-
         <div class="row" id="content">
+          <div class="col-12 mx-auto">
+            <br><br>
+            <p style="max-width: 600px; margin: auto">
+            Each image pair corresponds to a channel of an extended InceptionV1 network's 5c_Branch_3_b_1x1 layer.<br>
+            The network was trained on the CelebA classification task.<br>
+            Left images are maximizing the given channel's mean activation in pixel space.<br>
+            Right images are maximizing the mean activation among StyleGAN2 outputs.<br>
+            Click on the StyleGAN2 images for optimization progress videos.<br>
+            </p>
+            <br><br>
+
+            <h2 class="text-center"><strong>Neurons</strong></h2>
+          </div>
+        </div>
           <div class="col-12 mx-auto text-center" id="facesContent">
-            Neurons
+            <br><br>
           </div>
         </div>
       </div>
@@ -60,11 +73,8 @@
 
 
       <div class="row pt-5 pb-2">
-        <div class="col-6">
-          <p>&copy; 2020 Valaki</p>
-        </div>
 
-        <div class="col-6 text-right">
+        <div class="col-12 text-center">
           <a href="#" class="btn-link">Back to top</a>
         </div>
       </div>
