--- a/src/lucid.html
+++ b/src/lucid.html
@@ -46,6 +46,7 @@
 
         <div class="row mt-5" id="content">
           <div class="col-12 mx-auto text-center" id="lucidContent">
+            <br><br>
             Type
             <br>
             <div class="btn-group" role="group" aria-label="Basic example">
@@ -79,17 +80,13 @@
 
 
       <div class="row pt-5 pb-2">
-        <div class="col-6">
-          <p>&copy; 2020 Valaki</p>
-        </div>
 
-        <div class="col-6 text-right">
+        <div class="col-12 text-center">
           <a href="#" class="btn-link">Back to top</a>
         </div>
       </div>
     </footer>
   </main>
-  <script src="/js/lucid.js"></script>
 </body>
 
 </html>
