--- a/src/about.html
+++ b/src/about.html
@@ -49,8 +49,6 @@
             About text
           </div>
         </div>
-        <div id="lucidImages" class="row">
-        </div>
       </div>
     </section>
 
@@ -62,17 +60,13 @@
 
 
       <div class="row pt-5 pb-2">
-        <div class="col-6">
-          <p>&copy; 2020 Valaki</p>
-        </div>
 
-        <div class="col-6 text-right">
+        <div class="col-12 text-center">
           <a href="#" class="btn-link">Back to top</a>
         </div>
       </div>
     </footer>
   </main>
-  <script src="/js/lucid.js"></script>
 </body>
 
 </html>
