--- a/src/lucid.html
+++ b/src/lucid.html
@@ -82,7 +82,7 @@
       <div class="row pt-5 pb-2">
 
         <div class="col-12 text-center">
-          <a href="#" class="btn-link">Back to top</a>
+          <a onclick="window.scrollTo(0,0)" class="btn-link">Back to top</a>
         </div>
       </div>
     </footer>
